--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <header>
         <div class="container_topo">
             <h1>Movies</h1>
-            <span>New</span>
-            <span>Subscription</span>
-            <span>Free</span>
-            <span>Catalog</span>
+            <a href="#">New</a>
+            <a href="#">Subscription</a>
+            <a href="#">Free</a>
+            <a href="#">Catalog</a>
         </div>
         <div class="img_canto">
             <img src="./img/Search Music.png" alt="" class="lupa">
