--- a/index.html
+++ b/index.html
@@ -27,11 +27,26 @@
     </header>
 
     <main>
-
+        <div>
+         <div class="caixa_new">
+            New
+         </div>   
+         <div>
+            <h1>
+                Pokémon</h1>
+            <h1> 
+                Detective Pikachu
+            </h1>
+         </div>
+        </div>
+   
+   
+   
+   
     </main>
 
     <footer>
-
+aaaa
     </footer>
 
 </body>
