--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+
     <header>
         <div class="container_topo">
             <h1>Movies</h1>
@@ -27,7 +28,7 @@
     </header>
 
     <main>
-        <div>
+        <div class="container_text">
          <div class="caixa_new">
             New
          </div>   
@@ -39,14 +40,33 @@
             </h1>
          </div>
         </div>
-   
-   
-   
-   
     </main>
 
     <footer>
-aaaa
+        <div>
+            <h3>
+                in a world people collect Pokémon to do battle, a boy 
+                <br>comes across an inteligent talking Pikachu who seeks to be
+                <br>a detective.
+            </h3>
+            <span>Genres: </span>
+            <span>action, adventure, comedy </span>
+            <span class="caixa_12">  12+ </span>
+            <div class="container_estrela">
+             <img src="./img/Star.png" alt="" class="estrela">
+             <h2>6.8</h3>
+             <h5>/10(64.279)</h3>
+            </div>
+            <h1 class="container_watch">
+                Watch Now
+            </h1>
+            <div class="filmes">
+                <img src="./img/image 1.png" alt="">
+                <img src="./img/image 3.png" alt="">
+                <img src="./img/image 4.png" alt="">
+                <img src="./img/image 2.png" alt="">
+            </div>
+        </div>
     </footer>
 
 </body>
