--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
          </div>   
          <div>
             <h1>
-                Pokémon</h1>
-            <h1> 
-                Detective Pikachu
+                Pokémon
+                <br>Detective Pikachu
             </h1>
          </div>
         </div>
@@ -49,7 +48,7 @@
                 <br>comes across an inteligent talking Pikachu who seeks to be
                 <br>a detective.
             </h3>
-            <span>Genres: </span>
+            <span class="genres">Genres: </span>
             <span>action, adventure, comedy </span>
             <span class="caixa_12">  12+ </span>
             <div class="container_estrela">
@@ -61,10 +60,19 @@
                 Watch Now
             </h1>
             <div class="filmes">
-                <img src="./img/image 1.png" alt="">
-                <img src="./img/image 3.png" alt="">
-                <img src="./img/image 4.png" alt="">
-                <img src="./img/image 2.png" alt="">
+                <div>
+                    <img src="./img/image 1.png" alt=""> Dumbo
+                </div>
+                <div>
+                    <img src="./img/image 3.png" alt=""> Us
+                 </div>
+                 <div>
+                    <img src="./img/image 4.png" alt=""> Glass
+                 </div>
+                 <div>
+                    <img src="./img/image 2.png" alt=""> Captain Marvel
+                 </div>
+
             </div>
         </div>
     </footer>
