--- a/index.html
+++ b/index.html
@@ -59,8 +59,16 @@
             <h1 class="container_watch">
                 Watch Now
             </h1>
+
+                
+             </div>
             <div class="filmes">
-                <div>
+                <div class="centralizar">
+                      
+                <img src="./img/Go Back.png" alt="">
+                <img src="./img/Circled Right.png" alt="">
+                </div>
+                 <div>
                     <img src="./img/image 1.png" alt=""> Dumbo
                 </div>
                 <div>
@@ -72,7 +80,6 @@
                  <div>
                     <img src="./img/image 2.png" alt=""> Captain Marvel
                  </div>
-
             </div>
         </div>
     </footer>
