Trabalho finalizado, parte do mobile feito

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <header>
         <div class="container_topo">
-            <h1>Movies</h1>
+            <h1 class="movies">Movies</h1>
             <a href="#">New</a>
             <a href="#">Subscription</a>
             <a href="#">Free</a>
@@ -53,7 +53,7 @@
                 <br>a detective.
             </h3>
             <span class="genres">Genres: </span>
-            <span>action, adventure, comedy </span>
+            <span class="texto2">action, adventure, comedy </span>
             <span class="caixa_12"> 12+ </span>
             <div class="container_estrela">
                 <img src="./img/Star.png" alt="" class="estrela">
